Fixed-19814: Admin Forgot password captcha Icon misaligned.

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_temp.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_temp.less
@@ -249,12 +249,16 @@ label.mage-error {
 .page-layout-admin-login {
     .field-captcha {
         padding-left: 30px;
-        vertical-align: middle;
+        display: flex;
+        align-items: center;
+        padding-right: 0;
+        flex-direction: row-reverse;
 
         .captcha-reload {
+            width: 24px;
+            height: 24px;
             float: right;
-            vertical-align: middle;
-            margin-top: 1.3rem;
+            margin-left: 37px;
         }
     }
 }
